--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="정은유 포트폴리오 웹사이트" />
+    <title>정은유 포트폴리오</title>
   </head>
   <body>
     <div id="root"></div>
